--- a/BigSchool/Content/Site.css
+++ b/BigSchool/Content/Site.css
@@ -1,6 +1,16 @@
-﻿body {
+﻿/*.navbar-inverse {
+    background-color: #18160d;
+    border-color: #7340b2;
+}*/
+body {
     padding-top: 50px;
     padding-bottom: 20px;
+
+    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333333;
+    background-color: #f3ea97;*/
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -22,3 +32,5 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
