--- a/BigSchool/Views/Courses/Create.cshtml
+++ b/BigSchool/Views/Courses/Create.cshtml
@@ -5,8 +5,9 @@
 }
 
 <h2>Create</h2>
-@using (Html.BeginForm("Create", "Course"))
+@using (Html.BeginForm("Create", "Courses"))
 {
+    @Html.AntiForgeryToken();
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
@@ -39,5 +40,9 @@
     <div class="form-group" </div>
     <div class="form-group" </div>*@
 
+}
+@section scripts 
+{
+    @Scripts.Render("~/bundles/jqueryval"); 
 }
 
