--- a/BigSchool/Views/Home/Index.cshtml
+++ b/BigSchool/Views/Home/Index.cshtml
@@ -1,8 +1,33 @@
-﻿@{
+﻿@*@model IEnumerable<BigSchool.Models.Course>*@
+@model IEnumerable<BigSchool.Models.Course>
+@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
+<div class="row">
+    <ul>
+        @foreach (var item in Model)
+        {
+            <li>
+                @item.Datetime - @item.Lecturer.Name
+            </li>
+        }
+    </ul>
+</div>
+<ul class="course">
+    @foreach (var item in Model)
+    {
+        <li>
+            <div class="date">
+                <div class="month">@item.Datetime.ToString("MM")</div>
+                <div class="day">@item.Datetime.ToString("dd")</div>
+            </div>
+            <div class="details"><span class="lecturer">@item.Lecturer.Name</span>
+                                 <span class="category">@item.Category.Name</span>
+            </div>
+        </li>
+    }
+</ul>
+@*<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -28,4 +53,4 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
-</div>
+</div>*@
