Em nộp bổ sung bài cuối

--- a/BigSchool/Content/style.css
+++ b/BigSchool/Content/style.css
@@ -22,7 +22,7 @@ body {
 }
     .course > li.date {
         text-align: center;
-        background-color: #7340b2;
+        background-color: #d41d50;
         color: white;
         width: 60px;
         border-radius: 8px;
